# bitsy

./: 2.cast  BUILD.md  Cargo.toml  README.md  editor.toml  test.txt  text-editor-prd.txt
.cargo/: config.toml
.github/workflows/: ci.yml
asset/ascii-logo/: spider-100.txt  spider-125.txt  spider-150.txt  spider-50.txt  spider-75.txt
docs/: tree-sitter-research.md
src/: buffer.rs  command.rs  command_bar.rs  config.rs  cursor.rs  editor.rs  error.rs  event.rs  filetype.rs  fuzzy.rs  fuzzy_finder.rs  keymap.rs  lib.rs  main.rs  markdown.rs  mode.rs  motion.rs  operator.rs  register.rs  screen.rs  selection.rs  statusline.rs  syntax.rs  term_pane.rs  terminal.rs  theme.rs  undo.rs  viewport.rs  window.rs
src/editor/: action.rs  command_exec.rs  history.rs  input.rs  mod.rs  motion.rs  operator.rs  render.rs  surround.rs
src/lsp/: mod.rs  protocol.rs  transport.rs
tests/: integration_test.rs  mode_transitions_test.rs
