[package]
name = "bitsy"
version = "0.1.0"
edition = "2021"
authors = ["Bitsy Contributors"]

[dependencies]
# Terminal handling
crossterm = "0.28"

# Text buffer (rope data structure)
ropey = "1.6"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration (for later phases)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Regex for search (for later phases)
regex = "1.11"
