[package]
name = "bitsy"
version = "0.1.0"
edition = "2021"
authors = ["Bitsy Contributors"]
description = "A Vim-compatible text editor written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/bitsy"
readme = "README.md"
keywords = ["editor", "vim", "terminal", "text-editor", "tui"]
categories = ["command-line-utilities", "text-editors"]

# Minimum supported Rust version
rust-version = "1.70"

[dependencies]
# Terminal handling
crossterm = "0.28"

# Text buffer (rope data structure)
ropey = "1.6"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration (for later phases)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Regex for search (for later phases)
regex = "1.11"

# Markdown preview
pulldown-cmark = "0.11"
tiny_http = "0.12"
webbrowser = "1.0"

# Encoding detection
encoding_rs = "0.8.34"
chardetng = "0.1.2"

# Clipboard support
arboard = "3.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies can be added here if needed

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies can be added here if needed

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Binary configuration
[[bin]]
name = "bitsy"
path = "src/main.rs"
