[package]
name = "bitsy"
version = "0.1.0"
edition = "2021"
authors = ["Bitsy Contributors"]
description = "A Vim-compatible text editor written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/bitsy"
readme = "README.md"
keywords = ["editor", "vim", "terminal", "text-editor", "tui"]
categories = ["command-line-utilities", "text-editors"]

# Minimum supported Rust version
rust-version = "1.70"

[dependencies]
# Terminal handling
crossterm = "0.28"

# Text buffer (rope data structure)
ropey = "1.6"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration (for later phases)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Regex for search (for later phases)
regex = "1.11"

# JSON for LSP
serde_json = "1.0"

# Markdown preview
pulldown-cmark = "0.11"
tiny_http = "0.12"
webbrowser = "1.0"

# Encoding detection
encoding_rs = "0.8.34"
chardetng = "0.1.2"

# File watching
notify = "6.1.1"

# Clipboard support
arboard = "3.4"

# Directory traversal
walkdir = "2.5"

# PTY for terminal integration (unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Tree-sitter syntax highlighting
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-md = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies can be added here if needed

[features]
default = ["lang-rust", "lang-python", "lang-js", "lang-c", "lang-go", "lang-toml", "lang-json", "lang-md"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-js = ["dep:tree-sitter-javascript"]
lang-c = ["dep:tree-sitter-c"]
lang-go = ["dep:tree-sitter-go"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-json = ["dep:tree-sitter-json"]
lang-md = ["dep:tree-sitter-md"]

# Build profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Binary configuration
[[bin]]
name = "bitsy"
path = "src/main.rs"
